@@ -1347,11 +1347,61 @@ command to generate the output files.
     <glob pattern="*.o"/>
   </mime-type>
   <mime-type type="application/ogg">
-    <_comment>Ogg Vorbis audio</_comment>
+    <_comment>Ogg multimedia</_comment>
     <magic priority="50">
       <match type="string" value="OggS" offset="0"/>
     </magic>
     <glob pattern="*.ogg"/>
+  </mime-type>
+  <mime-type type="audio/x-vorbis">
+    <sub-class-of type="application/ogg"/>
+    <comment>Ogg Vorbis audio</comment>
+    <magic priority="80">
+      <match type="string" value="OggS" offset="0">
+        <match type="string" value="\x01vorbis" offset="28"/>
+      </match>
+    </magic>
+    <glob pattern="*.ogg"/>
+  </mime-type>
+  <mime-type type="audio/x-oggflac">
+    <sub-class-of type="application/ogg"/>
+    <comment>Ogg FLAC audio</comment>
+    <magic priority="80">
+      <match type="string" value="OggS" offset="0">
+        <match type="string" value="fLaC" offset="28"/>
+      </match>
+    </magic>
+    <glob pattern="*.ogg"/>
+  </mime-type>
+  <mime-type type="audio/x-speex">
+    <sub-class-of type="application/ogg"/>
+    <comment>Ogg Speex audio</comment>
+    <magic priority="80">
+      <match type="string" value="OggS" offset="0">
+        <match type="string" value="Speex  " offset="28"/>
+      </match>
+    </magic>
+    <glob pattern="*.ogg"/>
+  </mime-type>
+  <mime-type type="video/x-theora">
+    <sub-class-of type="application/ogg"/>
+    <comment>Ogg Theora video</comment>
+    <magic priority="80">
+      <match type="string" value="OggS" offset="0">
+        <match type="string" value="\x80theora" offset="28"/>
+      </match>
+    </magic>
+    <glob pattern="*.ogg"/>
+  </mime-type>
+  <mime-type type="video/x-ogm">
+    <sub-class-of type="application/ogg"/>
+    <comment>OGM video</comment>
+    <magic priority="80">
+      <match type="string" value="OggS" offset="0">
+        <match type="string" value="video" offset="29"/>
+      </match>
+    </magic>
+    <glob pattern="*.ogm"/>
   </mime-type>
   <!-- These are typically compount document of various types, so prefer
        extensions for these -->
